# DeepGapSeq

./: .gitignore  MANIFEST.in  README.md  Untitled-1.ipynb  ascii_version.csv  generate_traces_example.py  pyproject.toml  requirements.txt  setup.py
DeepGapSeq.egg-info/: SOURCES.txt
examples/: _test_hmmlearn.ipynb  deep_lasi_example.py  ebfret_generate_fit_example.py  generate_traces_example.py  launch_threaded_ebfret_example.py
simulation/: deepgapseq_trace_generator.py
src/: Untitled-1.ipynb  _test_hmmlearn.ipynb  _test_pg.ipynb  ebfret_generate_fit_example.py
src/DeepBacSeg/simulation/: deepgapseq_trace_generator.py
src/DeepGapSeq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/DeepGapSeq/DeepFretSimulate/: simulate.py
src/DeepGapSeq/DeepLASI/: wrapper.py
src/DeepGapSeq/GUI/: __init__.py  analysis_gui.py  analysiswindow_gui.py  ebfret_utils.py  exportsettings_gui.py  exportsettings_gui.ui  fittingwindow_gui.py  fittingwindow_gui.ui  gui.ui  gui_analysis_plot_utils.py  gui_deeplasi_utils.py  gui_ebfret_utils.py  gui_export_utils.py  gui_import_utils.py  gui_inceptiontime_utils.py  gui_plot_utils.py  gui_trace_plot_utils.py  importwindow_gui.py  importwindow_gui.ui  mainwindow_gui.py  (+3 more)
src/deepgapseq_simulated_traces/: trace_dataset_2023_10_30_SMD.mat  trace_dataset_2023_11_02_trace0.csv  trace_dataset_2023_11_02_trace1.csv  trace_dataset_2023_11_02_trace2.csv  trace_dataset_2023_11_02_trace3.csv  trace_dataset_2023_11_02_trace4.csv  trace_dataset_2023_11_02_trace5.csv  trace_dataset_2023_11_02_trace6.csv
(+39 files in other folders)
