[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepGapSeq"
version = "0.0.1"
authors = [
  {name="Piers Turner", email="piers.turner@physics.ox.ac.uk"},
  {name="Beichen Zhang", email="beichen.zhang@exeter.ox.ac.uk"},
]
description = "An smFRET analysis package, including deeplearning for gap state identification"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scikit-learn",
    "tqdm",
    "mlxtend==0.20.0",
    "pomegranate==0.14.8",
    "PyQt5",
    "hmmlearn",
    "pandas",
    "scipy",
    "spyder",
    "pyqt5",
    "pyqtgraph",
    "originpro",
]

[project.urls]
"Homepage" = "https://github.com/piedrro/DeepGapSeq.git"
"Bug Tracker" = "https://github.com/piedrro/DeepGapSeq/issues"


[project.scripts]
ebfret = "DeepGapSeq.ebFRET.ebfret_utils:launch_ebfret_instance"
analysis = "DeepGapSeq.GUI.analysis_gui:start_gui"